--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -444,6 +444,7 @@
                                               <class name="navigation-sidebar"/>
                                             </style>
                                             <property name="single-click-activate">true</property>
+                                            <signal name="activate" handler="dspy_window_interface_activate_cb" swapped="true"/>
                                             <property name="model">
                                               <object class="GtkSingleSelection" id="interfaces_selection">
                                                 <property name="model">
@@ -464,7 +465,135 @@
                                                           </lookup>
                                                         </binding>
                                                         <property name="sorter">
-                                                          <object class="GtkStringSorter" id="nodes_sorter">
+                                                          <object class="GtkStringSorter" id="interfaces_sorter">
+                                                            <property name="expression">
+                                                              <lookup name="title" type="DspyIntrospectable"/>
+                                                            </property>
+                                                          </object>
+                                                        </property>
+                                                      </object>
+                                                    </property>
+                                                  </object>
+                                                </property>
+                                              </object>
+                                            </property>
+                                            <property name="factory">
+                                              <object class="GtkBuilderListItemFactory">
+                                                <property name="bytes"><![CDATA[
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="GtkListItem">
+    <property name="child">
+      <object class="GtkBox">
+        <property name="spacing">6</property>
+        <child>
+          <object class="GtkLabel">
+            <property name="hexpand">true</property>
+            <property name="ellipsize">middle</property>
+            <property name="xalign">0</property>
+            <property name="use-markup">true</property>
+            <binding name="label">
+              <lookup name="title" type="DspyIntrospectable">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+            <binding name="tooltip-text">
+              <lookup name="title" type="DspyIntrospectable">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+          </object>
+        </child>
+        <child>
+          <object class="GtkImage">
+            <property name="icon-name">go-next-symbolic</property>
+          </object>
+        </child>
+      </object>
+    </property>
+  </template>
+</interface>
+]]>
+                                                </property>
+                                              </object>
+                                            </property>
+                                          </object>
+                                        </child>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwNavigationPage" id="members_page">
+                            <property name="title" translatable="yes">Members</property>
+                            <property name="child">
+                              <object class="AdwToolbarView">
+                                <child type="top">
+                                  <object class="AdwHeaderBar">
+                                    <child type="title">
+                                      <object class="AdwWindowTitle">
+                                        <binding name="title">
+                                          <lookup name="name" type="DspyInterface">
+                                            <lookup name="interface">DspyWindow</lookup>
+                                          </lookup>
+                                        </binding>
+                                        <binding name="subtitle">
+                                          <lookup name="path" type="DspyNode">
+                                            <lookup name="node">DspyWindow</lookup>
+                                          </lookup>
+                                        </binding>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkBox">
+                                    <property name="orientation">vertical</property>
+                                    <child>
+                                      <object class="GtkSearchEntry">
+                                        <property name="placeholder-text" translatable="yes">Filter…</property>
+                                        <property name="margin-bottom">6</property>
+                                        <property name="margin-end">6</property>
+                                        <property name="margin-start">6</property>
+                                        <property name="margin-top">6</property>
+                                        <property name="text" bind-source="members_filter" bind-property="search" bind-flags="sync-create|bidirectional"/>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkScrolledWindow">
+                                        <property name="hscrollbar-policy">never</property>
+                                        <property name="vexpand">true</property>
+                                        <child>
+                                          <object class="GtkListView" id="members_list_view">
+                                            <style>
+                                              <class name="navigation-sidebar"/>
+                                            </style>
+                                            <property name="single-click-activate">true</property>
+                                            <property name="model">
+                                              <object class="GtkSingleSelection" id="members_selection">
+                                                <property name="model">
+                                                  <object class="GtkFilterListModel" id="members_filtered">
+                                                    <property name="filter">
+                                                      <object class="GtkStringFilter" id="members_filter">
+                                                        <property name="search"></property>
+                                                        <property name="expression">
+                                                          <lookup name="title" type="DspyIntrospectable"/>
+                                                        </property>
+                                                      </object>
+                                                    </property>
+                                                    <property name="model">
+                                                      <object class="GtkSortListModel" id="members_sorted">
+                                                        <binding name="model">
+                                                          <lookup name="members" type="DspyInterface">
+                                                            <lookup name="interface">DspyWindow</lookup>
+                                                          </lookup>
+                                                        </binding>
+                                                        <property name="sorter">
+                                                          <object class="GtkStringSorter" id="members_sorter">
                                                             <property name="expression">
                                                               <lookup name="title" type="DspyIntrospectable"/>
                                                             </property>
